src/bindings.h

typedef void (*dartFileLoadedCallback_t)(enum PlayerErrors *,
                                         char *completeFileName,
                                         unsigned int *, uint64_t *counter);
typedef void (*dartStateChangedCallback_t)(enum PlayerStateEvents *);