lib/src/bindings/flutter_soloud_ffigen.dart


  /// Given hash doesn't belong to a buffer stream.
  hashIsNotABufferStream(21),

  /// Trying to add PCM data but the stream is marked to be ended
  /// already, by the user or when the stream reached its maximum
  /// capacity, in this case the stream is automatically marked to be ended.
  streamEndedAlready(22),

  /// Failed to create Opus decoder.
  failedToCreateOpusDecoder(23),

  /// Failed to decode Opus packet.
  failedToDecodeOpusPacket(24),

  /// A BufferStream using `release` buffer type can be played only once.
  bufferStreamCanBePlayedOnlyOnce(25),

  /// The maximum number of active voices has been reached.
  maxActiveVoiceCountReached(26),

  /// Trying to get time consumed from wrong buffer type.
  wrongBufferTypeToAskForTimeConsumed(27),

  /// Buffer stream with released buffer type, cannot be seeked.
  bufferStreamWithReleasedBufferTypeCannotBeSeeked(28),

  /// Audio format not supported.
  audioFormatNotSupported(29),

  /// Xiph libraries not found.
  xiphLibsNotFound(30),

  /// Bus ID not found.
  busIdNotFound(31),

  /// Given hash doesn't belong to a pull buffer stream.
  hashIsNotAPullBufferStream(32),

  /// The pull buffer stream is in an invalid state for this operation.
  invalidPullBufferState(33),

  /// The output audio device could not be started or resumed.
  audioDeviceFailedToStart(34),

  /// SoLoud didn't return a valid voice handle when starting the playback.
  failedToStartPlayback(35);

  final int value;
  const PlayerErrors(this.value);

  static PlayerErrors fromValue(int value) => switch (value) {
    0 => noError,
    1 => invalidParameter,
    2 => fileNotFound,
    3 => fileLoadFailed,
    4 => fileAlreadyLoaded,
    5 => dllNotFound,
    6 => outOfMemory,
    7 => notImplemented,
    8 => unknownError,
    9 => nullPointer,
    10 => soundHashNotFound,
    11 => backendNotInited,
    12 => filterNotFound,
    13 => visualizationNotEnabled,
    14 => maxNumberOfFiltersReached,
    15 => filterAlreadyAdded,
    16 => playerAlreadyInited,
    17 => soundHandleNotFound,
    18 => filterParameterGetError,
    19 => noPlaybackDevicesFound,
    20 => pcmBufferFull,
    21 => hashIsNotABufferStream,
    22 => streamEndedAlready,
    23 => failedToCreateOpusDecoder,
    24 => failedToDecodeOpusPacket,
    25 => bufferStreamCanBePlayedOnlyOnce,
    26 => maxActiveVoiceCountReached,
    27 => wrongBufferTypeToAskForTimeConsumed,
    28 => bufferStreamWithReleasedBufferTypeCannotBeSeeked,
    29 => audioFormatNotSupported,
    30 => xiphLibsNotFound,
    31 => busIdNotFound,
    32 => hashIsNotAPullBufferStream,
    33 => invalidPullBufferState,
    34 => audioDeviceFailedToStart,
    35 => failedToStartPlayback,
    _ => throw ArgumentError('Unknown value for PlayerErrors: $value'),
  };
}

typedef dartFileLoadedCallback_tFunction =
    ffi.Void Function(
      ffi.Pointer<ffi.UnsignedInt>,
      ffi.Pointer<ffi.Char>,
      ffi.Pointer<ffi.UnsignedInt>,
      ffi.Pointer<ffi.Uint64>,
    );
typedef DartdartFileLoadedCallback_tFunction =
    void Function(
      ffi.Pointer<ffi.UnsignedInt>,
      ffi.Pointer<ffi.Char>,
      ffi.Pointer<ffi.UnsignedInt>,
      ffi.Pointer<ffi.Uint64>,
    );
typedef dartFileLoadedCallback_t =
    ffi.Pointer<ffi.NativeFunction<dartFileLoadedCallback_tFunction>>;

enum PlayerStateEvents {
  event_started(0),
  event_stopped(1),
  event_rerouted(2),
  event_interruption_began(3),
  event_interruption_ended(4),
  event_unlocked(5),

  /// An automatic output-device start failed, after the backend had already
  /// rebuilt the device and retried. Emitted by the lifecycle scheduler, not by
  /// the OS, so unlike the notifications above it is reliable on every backend.
  ///
  /// WARNING: Keep in sync with `PlayerStateNotification` in
  /// `lib/src/enums.dart`; the Dart side indexes this by ordinal.
  event_audio_device_start_failed(6);

  final int value;
  const PlayerStateEvents(this.value);

  static PlayerStateEvents fromValue(int value) => switch (value) {
    0 => event_started,
    1 => event_stopped,
    2 => event_rerouted,
    3 => event_interruption_began,
    4 => event_interruption_ended,
    5 => event_unlocked,
    6 => event_audio_device_start_failed,
    _ => throw ArgumentError('Unknown value for PlayerStateEvents: $value'),
  };
}

typedef dartStateChangedCallback_tFunction =
    ffi.Void Function(ffi.Pointer<ffi.UnsignedInt>);
typedef DartdartStateChangedCallback_tFunction =
    void Function(ffi.Pointer<ffi.UnsignedInt>);
typedef dartStateChangedCallback_t =
    ffi.Pointer<ffi.NativeFunction<dartStateChangedCallback_tFunction>>;
typedef dartMixerOutputDataCallback_tFunction =
    ffi.Void Function(ffi.Pointer<ffi.UnsignedChar> data, ffi.Uint64 length);
typedef DartdartMixerOutputDataCallback_tFunction =
    void Function(ffi.Pointer<ffi.UnsignedChar> data, int length);

/// callback handing dart a chunk of captured mixer output. Declared here rather
/// than in bindings.cpp so `bindings.h` -- the ffigen entry point -- can name
/// it in the exports that take one.
typedef dartMixerOutputDataCallback_t =
    ffi.Pointer<ffi.NativeFunction<dartMixerOutputDataCallback_tFunction>>;
typedef dartVisualizationCallback_tFunction =
    ffi.Void Function(
      ffi.Int32 channelCount,
      ffi.Pointer<ffi.Pointer<ffi.Float>> waveDataPerChannel,
      ffi.Int32 waveSamples,
      ffi.Pointer<ffi.Pointer<ffi.Float>> fftDataPerChannel,
      ffi.Int32 fftSamples,
    );
typedef DartdartVisualizationCallback_tFunction =
    void Function(
      int channelCount,
      ffi.Pointer<ffi.Pointer<ffi.Float>> waveDataPerChannel,
      int waveSamples,
      ffi.Pointer<ffi.Pointer<ffi.Float>> fftDataPerChannel,
      int fftSamples,
    );

/// Callback handing dart visualization data (wave and/or FFT) per channel.
typedef dartVisualizationCallback_t =
    ffi.Pointer<ffi.NativeFunction<dartVisualizationCallback_tFunction>>;

/// The state of the audio output device.
///
/// The values mirror miniaudio's `ma_device_state` so they can be returned
/// directly from the backend without translation.
///
/// WARNING: Keep these in sync with `lib/src/enums.dart`.
/// WARNING: Keep these in sync with `lib/src/enums.dart`.
enum AudioDeviceState {
  /// The device is uninitialized. Also returned before the engine is
  /// initialized or after it has been deinitialized.
  audioDeviceUninitialized(0),

  /// The device is stopped. This is the device's default state right after
  /// initialization.
  audioDeviceStopped(1),

  /// The device is started and is requesting and/or delivering audio data.
  audioDeviceStarted(2),

  /// The device is transitioning from a stopped state to a started state.
  audioDeviceStarting(3),

  /// The device is transitioning from a started state to a stopped state.
  audioDeviceStopping(4);

  final int value;
  const AudioDeviceState(this.value);

  static AudioDeviceState fromValue(int value) => switch (value) {
    0 => audioDeviceUninitialized,
    1 => audioDeviceStopped,
    2 => audioDeviceStarted,
    3 => audioDeviceStarting,
    4 => audioDeviceStopping,
    _ => throw ArgumentError('Unknown value for AudioDeviceState: $value'),
  };
}

typedef dartOnBufferingCallback_tFunction =
    ffi.Void Function(
      ffi.Bool isBuffering,
      ffi.UnsignedInt handle,
      ffi.Double time,
    );
typedef DartdartOnBufferingCallback_tFunction =
    void Function(bool isBuffering, int handle, double time);

/// callback to tell dart that we are buffering/unbuffering
typedef dartOnBufferingCallback_t =
    ffi.Pointer<ffi.NativeFunction<dartOnBufferingCallback_tFunction>>;

/// Strucs to send metadata from C to Dart.
/// The "AudioMetadata" strucs got from *_stream_decoder.cpp in the getMetadata(),
/// will be converted to these to be sent to Dart.
enum DetectedTypeFFI {
  UNKNOWN(0),
  OGG_OPUS(1),
  OGG_VORBIS(2),
  OGG_FLAC(3),
  MP3_WITH_ID3(4),
  MP3_STREAM(5),
  WAV(6);

  final int value;
  const DetectedTypeFFI(this.value);

  static DetectedTypeFFI fromValue(int value) => switch (value) {
    0 => UNKNOWN,
    1 => OGG_OPUS,
    2 => OGG_VORBIS,
    3 => OGG_FLAC,
    4 => MP3_WITH_ID3,
    5 => MP3_STREAM,
    6 => WAV,
    _ => throw ArgumentError('Unknown value for DetectedTypeFFI: $value'),
  };
}

final class Mp3MetadataFFI extends ffi.Struct {
  @ffi.Array.multi([1024])
  external ffi.Array<ffi.Char> title;

  @ffi.Array.multi([1024])
  external ffi.Array<ffi.Char> artist;

  @ffi.Array.multi([1024])
  external ffi.Array<ffi.Char> album;

  @ffi.Array.multi([1024])
  external ffi.Array<ffi.Char> date;

  @ffi.Array.multi([1024])
  external ffi.Array<ffi.Char> genre;
}

/// Comment key-value pair structure
final class CommentPairFFI extends ffi.Struct {
  @ffi.Array.multi([1024])
  external ffi.Array<ffi.Char> key;

  @ffi.Array.multi([1024])
  external ffi.Array<ffi.Char> value;
}

/// Structure to hold track metadata
final class VorbisInfoFFI extends ffi.Struct {
  /// Dont' use here the vorbis_info struct because the lib could be not linked
  @ffi.Int()
  external int version;

  @ffi.Int()
  external int channels;

  @ffi.Long()
  external int rate;

  /// The below bitrate declarations are *hints*.
  /// Combinations of the three values carry the following implications:
  ///
  /// all three set to the same value:
  /// implies a fixed rate bitstream
  /// only nominal set:
  /// implies a VBR stream that averages the nominal bitrate.  No hard
  /// upper/lower limit
  /// upper and or lower set:
  /// implies a VBR bitstream that obeys the bitrate limits. nominal
  /// may also be set to give a nominal rate.
  /// none set:
  /// the coder does not care to speculate.
  @ffi.Long()
  external int bitrate_upper;

  @ffi.Long()
  external int bitrate_nominal;

  @ffi.Long()
  external int bitrate_lower;

  @ffi.Long()
  external int bitrate_window;
}

final class OpusInfoFFI extends ffi.Struct {
  @ffi.Uint8()
  external int version;

  @ffi.Uint8()
  external int channels;

  @ffi.Uint16()
  external int pre_skip;

  @ffi.Uint32()
  external int input_sample_rate;

  /// signed, Q8 dB
  @ffi.Int16()
  external int output_gain;

  @ffi.Uint8()
  external int mapping_family;

  /// Optional fields if mapping_family != 0
  @ffi.Uint8()
  external int stream_count;

  @ffi.Uint8()
  external int coupled_count;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Uint8> channel_mapping;

  @ffi.Int()
  external int channel_mapping_size;
}

final class FlacInfoFFI extends ffi.Struct {
  @ffi.Uint32()
  external int min_blocksize;

  @ffi.Uint32()
  external int max_blocksize;

  @ffi.Uint32()
  external int min_framesize;

  @ffi.Uint32()
  external int max_framesize;

  @ffi.Uint32()
  external int sample_rate;

  @ffi.Uint32()
  external int channels;

  @ffi.Uint32()
  external int bits_per_sample;

  @ffi.Uint32()
  external int total_samples;
}

final class OggMetadataFFI extends ffi.Struct {
  @ffi.Array.multi([1024])
  external ffi.Array<ffi.Char> vendor;

  @ffi.Uint32()
  external int commentsCount;

  @ffi.Array.multi([32])
  external ffi.Array<CommentPairFFI> comments;

  external VorbisInfoFFI vorbisInfo;

  external OpusInfoFFI opusInfo;

  external FlacInfoFFI flacInfo;
}

final class AudioMetadataFFI extends ffi.Struct {
  @ffi.UnsignedInt()
  external int detectedTypeAsInt;

  DetectedTypeFFI get detectedType =>
      DetectedTypeFFI.fromValue(detectedTypeAsInt);

  external Mp3MetadataFFI mp3Metadata;

  external OggMetadataFFI oggMetadata;
}

typedef dartOnMetadataCallback_tFunction =
    ffi.Void Function(AudioMetadataFFI metadata);
typedef DartdartOnMetadataCallback_tFunction =
    void Function(AudioMetadataFFI metadata);
